crates/toml_edit/tests/fixtures/invalid/table-nested-brackets-open.stderr
TOML parse error at line 1, column 3
  |
1 | [a[b]
  |   ^
Unexpected `[`
Expected `.` or `]`
While parsing a Table Header
